[package]
name = "pinocchio-token-program"
version = "0.0.0"
description = "A pinocchio-based Token (aka 'p-token') program"
authors = { workspace = true}
repository = { workspace = true}
license = { workspace = true}
edition = { workspace = true}
readme = "./README.md"

[lib]
crate-type = ["cdylib"]

[features]
logging = []
test-sbf = []

[dependencies]
#pinocchio = { version = "0.7", git = "https://github.com/febo/pinocchio.git", branch = "febo/close-unstable" }
#pinocchio-log = { version = "0.3", git = "https://github.com/febo/pinocchio.git", branch = "febo/close-unstable", default-features = false }
#pinocchio-pubkey = { version = "0.2.2", git = "https://github.com/febo/pinocchio.git", branch = "febo/close-unstable", default-features = false }
#spl-token-interface = { version = "^0", path = "../interface" }
five8_const = { version = "0.1.3" }

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "2.1"
solana-sdk = "2.1"
spl-token = { version="^4", features=["no-entrypoint"] }
test-case = "3.3.1"
